--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
 
 <head>
-    <title>Vincenzo Scalzi - Web performance addict && engineer</title>
-    <meta name=viewport content="width=device-width,initial-scale=1.0" />
-    <link rel=canonical href=https://vcz.fr />
+    <title>Vincenzo Scalzi - Web Performance Addict && Engineer</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="canonical" href="https://vcz.fr" />
+    <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
@@ -49,31 +50,48 @@
         <div id=g>
             <div class=c>
                 <h2>About me</h2>
-                <p>Hello, Vincenzo <b>Scalzi</b> here!</p>
-                <p>I am a passionate web engineer and a front / back hybrid. <em>In performance I trust.</em></p>
-                <p>I currently work at <a href=//moonda.com> <strong>Moonda</strong></a> as a full-stack developer. It
-                    is a web agency based in Bordeaux using <a href=//ez.no>eZPublish </a> and <a
-                        href=//ezplatform.com>eZPlatform </a>, Content Management Systems based on PHP and Symfony.</p>
-                        <p>It is also one of my duties to help deliver what our team considers best in terms of product
-                        quality by actively participating in the creation of our integration and delivery pipeline,
-                        quality assurance, coding standards and by allowing a company-wide sharing of knowledge while
-                        solving some of the most challenging issues when maintaining <s>dark magic</s> undocumented
-                        legacy code.</p>
-                <p>Before that, I was in <a href=//privalia.com> <strong>Privalia</strong></a>, a Spanish fashion
+                <p>
+                    Hello, Vincenzo <b>Scalzi</b> here!</p>
+                <p>
+                    I am a passionate web engineer and a front / back hybrid. <em>In performance I trust.</em></p>
+                <p>
+                    I currently work at <a href="//moonda.com"> <strong>Moonda</strong></a> as a full-stack developer.
+                    It is a web agency based in Bordeaux using <a href="//ez.no">eZPublish </a> and
+                    <a href="//ezplatform.com">eZPlatform </a>, Content Management Systems based on PHP and Symfony.
+                </p>
+                <p>
+                    It is also one of my duties to help deliver what our team considers best in terms of product
+                    quality by actively participating in the creation of our integration and delivery pipeline,
+                    quality assurance, coding standards and by allowing a company-wide sharing of knowledge while
+                    solving some of the most challenging issues when maintaining <s>dark magic</s> undocumented
+                    legacy code.
+                </p>
+                <p>
+                    Before that, I was in <a href="//privalia.com"> <strong>Privalia</strong></a>, a Spanish fashion
                     outlet, as a full-stack developer in their <strong>Performance & Core Platform</strong> team. I was
-                    in charge of a project that automatically checks the performance of their platforms.</p>
-                <p>I have been a Computer Science Engineering student at <a href=//enseirb-matmeca.fr> <strong>Bordeaux
-                        Graduate School of Engineering</strong></a> or <strong>ENSEIRB-MATMECA</strong>, for short. I
-                    chose the Multimedia and Video games specialty there, mostly to open myself to new ideas.</p>
-                <p>If you ever need help with a web project or want to learn a few things, let's chat!</p>
-                <p>Have a nice visit!</p>
+                    in charge of a project that automatically checks the performance of their platforms.
+                </p>
+                <p>
+                    I have been a Computer Science Engineering student at
+                    <a href="//enseirb-matmeca.fr"><strong>Bordeaux Graduate School of Engineering</strong></a> or
+                    <strong>ENSEIRB-MATMECA</strong>, for short.
+                    I chose the Multimedia and Video games specialty there, mostly to open myself to new ideas.
+                </p>
+                <p>
+                    If you ever need help with a web project or want to learn a few things, let's chat!
+                </p>
+                <p>
+                    Have a nice visit!
+                </p>
             </div>
             <div id=p>
                 <div class=c>
                     <h2>When boredom strikes</h2>
-                    <p>The tiles of this section will give you an overall idea of my favorite pass-time. It is just the
+                    <p>
+                        The tiles of this section will give you an overall idea of my favorite pass-time. It is just the
                         <em>tip of the iceberg</em> and I would be delighted to further go into details about projects
-                        that did not make it to this list because reasons.</p>
+                        that did not make it to this list because reasons.
+                    </p>
                 </div>
                 <div class="c d">
                     <div>
