[Fix] Enabled fonts and images

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <div class=c>
                     <h3>English</h3>
                     <p>
-                        <a href="r/Vincenzo Scalzi - Resume.pdf">Link</a>
+                        <a href="/r/Vincenzo Scalzi - Resume.pdf">Link</a>
                         &mdash; 60KB, last modified 04/18/2018
                     </p>
                 </div>
@@ -292,7 +292,7 @@
                 <div class=c>
                     <h3>French</h3>
                     <p>
-                        <a href="r/Vincenzo Scalzi - CV.pdf">Link</a>
+                        <a href="/r/Vincenzo Scalzi - CV.pdf">Link</a>
                         &mdash; 62KB, last modified 04/18/2018
                     </p>
                 </div>
