[Fix] Responsive and content issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="c t">
                 <u class=a></u>
                 <h1 class=b><span class=p>V</span>in<span class=p>c</span>en<span class=p>z</span>o <b>Scalzi</b></h1>
-                <p>Web performance addict <b class=p>&amp;&amp;</b> engineer</p>
+                <p>Web Performance Addict <b class=p>&amp;&amp;</b> Engineer</p>
             </div>
             <div class=c>
                 <h2 class=t>Links</h2>
@@ -57,7 +57,7 @@
                 <p>
                     I currently work at <a href="//moonda.com"> <strong>Moonda</strong></a> as a full-stack developer.
                     It is a web agency based in Bordeaux using <a href="//ez.no">eZPublish </a> and
-                    <a href="//ezplatform.com">eZPlatform </a>, Content Management Systems based on PHP and Symfony.
+                    <a href="//ezplatform.com">eZPlatform</a>, Content Management Systems based on PHP and Symfony.
                 </p>
                 <p>
                     It is also one of my duties to help deliver what our team considers best in terms of product
