[Feature] Removed collapsible nav links

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ active: index
     <p>
         I am a passionate web engineer and a front / back hybrid. <em>In performance I trust.</em></p>
     <p>
-        I currently work at <a href="//moonda.com"> <strong>Moonda</strong></a> as a full-stack developer.
-        It is a web agency based in Bordeaux using <a href="//ez.no">eZPublish </a> and
-        <a href="//ezplatform.com">eZPlatform</a>, Content Management Systems based on PHP and Symfony.
+        I currently work at <a href="https://moonda.com/"><strong>Moonda</strong></a> as a full-stack developer.
+        It is a web agency based in Bordeaux using <a href="https://ez.no/">eZPublish </a> and
+        <a href="https://ezplatform.com/">eZPlatform</a>, Content Management Systems based on PHP and Symfony.
     </p>
     <p>
         It is also one of my duties to help deliver what our team considers best in terms of product
@@ -22,13 +22,13 @@ active: index
         legacy code.
     </p>
     <p>
-        Before that, I was in <a href="//privalia.com"> <strong>Privalia</strong></a>, a Spanish fashion
+        Before that, I was in <a href="https://privalia.com/"> <strong>Privalia</strong></a>, a Spanish fashion
         outlet, as a full-stack developer in their <strong>Performance & Core Platform</strong> team. I was
         in charge of a project that automatically checks the performance of their platforms.
     </p>
     <p>
         I have been a Computer Science Engineering student at
-        <a href="//enseirb-matmeca.fr"><strong>Bordeaux Graduate School of Engineering</strong></a> or
+        <a href="https://enseirb-matmeca.bordeaux-inp.fr"><strong>Bordeaux Graduate School of Engineering</strong></a> or
         <strong>ENSEIRB-MATMECA</strong>, for short.
         I chose the Multimedia and Video games specialty there, mostly to open myself to new ideas.
     </p>
