--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@ permalink: /resume
     <div class=c>
         <h3>English</h3>
         <p>
-            <a href="/r/Vincenzo Scalzi - Resume.pdf">Link</a>
+            <a href="/assets/pdf/Vincenzo Scalzi - Resume.pdf">Link</a>
             &mdash; 60KB, last modified 04/18/2018
         </p>
     </div>
@@ -30,7 +30,7 @@ permalink: /resume
     <div class=c>
         <h3>French</h3>
         <p>
-            <a href="/r/Vincenzo Scalzi - CV.pdf">Link</a>
+            <a href="/assets/pdf/Vincenzo Scalzi - CV.pdf">Link</a>
             &mdash; 62KB, last modified 04/18/2018
         </p>
     </div>
