[Feature] Deobfuscate code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 active: index
 ---
 
-<div class=c>
+<div class="card">
     <h2>About me</h2>
     <p>
         Hello, Vincenzo <b>Scalzi</b> here!</p>
