--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@ permalink: /resume
 ---
 
 <div>
-    <div class=c>
+    <div class="card">
         <h2>Thy resume</h2>
 
         <p>
@@ -19,7 +19,7 @@ permalink: /resume
         </p>
     </div>
 
-    <div class=c>
+    <div class="card">
         <h3>English</h3>
         <p>
             <a href="/assets/pdf/Vincenzo Scalzi - Resume.pdf">Link</a>
@@ -27,7 +27,7 @@ permalink: /resume
         </p>
     </div>
 
-    <div class=c>
+    <div class="card">
         <h3>French</h3>
         <p>
             <a href="/assets/pdf/Vincenzo Scalzi - CV.pdf">Link</a>
