--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@ permalink: /skills
 ---
 
 <div>
-    <div class=c>
+    <div class="card">
         <h2>Abilities</h2>
         <p>
             Technologically speaking, I am agnostic.
@@ -18,7 +18,8 @@ permalink: /skills
             We might lose accuracy here so buckle up buckaroo, we're in for an joyful ride!
         </p>
     </div>
-    <div class=c>
+
+    <div class="card">
         <h3>The techie</h3>
         I feel confident with:
         <ul>
@@ -36,7 +37,7 @@ permalink: /skills
         <ul>
             <li>[Put your favorite web framework here]</li>
             <li>Functional programming</li>
-            <li>Microsoft .NET C#, NodeJS or even <a href="//web-artanis.com/">Artanis</a></li>
+            <li>Microsoft .NET C#, NodeJS or even <a href="https://web-artanis.com/">Artanis</a></li>
             <li>Low level languages when relevant</li>
         </ul>
 
@@ -50,13 +51,14 @@ permalink: /skills
                 <ul>
                     <li>Browser tools: Firefox Developer Edition, Google Chrome Beta</li>
                     <li>Client performance: Yellowlab, WebpageTest</li>
-                    <li>Load testing: <i title=Certified!></i> Octoperf</li>
+                    <li>Load testing: <span class="icon" title="Certified!"></span> Octoperf</li>
                     <li>App performance: AppDynamics, BlackFire</li>
                 </ul>
             </li>
         </ul>
     </div>
-    <div class=c>
+
+    <div class="card">
         <h3>The human</h3>
 
         I think I am:
@@ -67,7 +69,8 @@ permalink: /skills
             <li>A crazy fast learner</li>
         </ul>
 
-        Want to become:<ul>
+        Want to become:
+        <ul>
             <li>Socially responsible</li>
             <li>A world changer</li>
         </ul>
@@ -79,7 +82,7 @@ permalink: /skills
         </ul>
     </div>
 
-    <div class=c>
+    <div class="card">
         <h3>The other stuff</h3>
 
         <p>
