[Feature] More content, better colors

--- a/index.html
+++ b/index.html
@@ -6,34 +6,48 @@ active: index
 <div class="card">
     <h2>About me</h2>
     <p>
-        Hello, Vincenzo <b>Scalzi</b> here!</p>
+        Hello, Vincenzo <b>Scalzi</b> here!
+    </p>
     <p>
-        I am a passionate web engineer and a front / back hybrid. <em>In performance I trust.</em></p>
+        I am a passionate web engineer that experimented with all sorts of web technologies and always in search
+        for more ideas. <em>In performance I trust.</em>
+    </p>
+    <p>
+        It is one of my duties to help deliver what we consider best in terms of product quality by
+        actively participating in the creation of integration and delivery pipelines, quality assurance,
+        product standards and by enabling a company-wide sharing of knowledge while solving some of the most 
+        challenging issues when maintaining <s>dark magic</s> undocumented legacy code.
+    </p>
+    <p>
+        Apart from that, I spend time tweaking infrastructure, internal platforms, sharing knowledge 
+        with peers and maintainers and organizing our technological ecosystem including introducing tools 
+        and services, recruiting and scouting for ideas thay may or may not impact our business.
+    </p>
+    <p>
+        When I am not behind my desk, I read from <a href="https://news.ycombinator.com/">Hacker News</a>,
+        join tech meetups, share my <a href="https://github.com/vcz-fr/meetup-notes">meetup notes</a>,
+        explore ideas and enjoy my time!
+    </p>
+    <hr>
     <p>
         I currently work at <a href="https://moonda.com/"><strong>Moonda</strong></a> as a full-stack developer.
-        It is a web agency based in Bordeaux using <a href="https://ez.no/">eZPublish </a> and
+        It is a web agency based in Bordeaux using <a href="https://ez.no/">eZPublish</a> and
         <a href="https://ezplatform.com/">eZPlatform</a>, Content Management Systems based on PHP and Symfony.
+        We also create our own products and platforms using edge technologies and practices.
     </p>
     <p>
-        It is also one of my duties to help deliver what our team considers best in terms of product
-        quality by actively participating in the creation of our integration and delivery pipeline,
-        quality assurance, coding standards and by allowing a company-wide sharing of knowledge while
-        solving some of the most challenging issues when maintaining <s>dark magic</s> undocumented
-        legacy code.
-    </p>
-    <p>
-        Before that, I was in <a href="https://privalia.com/"> <strong>Privalia</strong></a>, a Spanish fashion
-        outlet, as a full-stack developer in their <strong>Performance & Core Platform</strong> team. I was
-        in charge of a project that automatically checks the performance of their platforms.
+        Before that, I was in <a href="https://privalia.com/"><strong>VeePee</strong>, a.k.a. Privalia</a>, 
+        a Spanish fashion outlet, as a full-stack developer in their <strong>Performance & Core Platform</strong>
+        team. I was in charge of a project that automatically checks the performance of their platforms.
     </p>
     <p>
         I have been a Computer Science Engineering student at
-        <a href="https://enseirb-matmeca.bordeaux-inp.fr"><strong>Bordeaux Graduate School of Engineering</strong></a> or
-        <strong>ENSEIRB-MATMECA</strong>, for short.
-        I chose the Multimedia and Video games specialty there, mostly to open myself to new ideas.
+        <a href="https://enseirb-matmeca.bordeaux-inp.fr/"><strong>Bordeaux Graduate School of Engineering</strong></a> or
+        <strong>ENSEIRB-MATMECA</strong>, for short. I chose the Multimedia and Video games specialty there,
+        mostly to open myself to new ideas.
     </p>
     <p>
-        If you ever need help with a web project or want to learn a few things, let's chat!
+        If you ever need help with a web project or want to learn a few things, let's have a chat!
     </p>
     <p>
         Have a nice visit!
