--- a/resume.html
+++ b/resume.html
@@ -10,10 +10,13 @@ permalink: /resume
     <p>
         Again, thank you for the time you have spent discovering this website.
         Did you know that it only uses HTML and CSS for everything?
-        Yes, that's right, no JS or back-end technology involved! Everything is static!
+        Yes, that is correct, no JavaScript, although it is hosted on 
+        <a href="https://pages.github.com/">GitHub Pages</a>, using 
+        <a href="https://jekyllrb.com/">Jekyll</a> to generate the content you are reading and
+        proudly delivered to you by <a href="https://www.cloudflare.com/">CloudFlare</a>!
     </p>
     <p>
-        Anyway, if you want to find out more, here are my English and French resumes.
+        Anyway, if you want to find out more, here are my generic resumes.
         Don't forget to come see me on my social networks!
     </p>
 </div>
