--- a/skills.html
+++ b/skills.html
@@ -26,8 +26,8 @@ permalink: /skills
         <li>ReactJS 15, Angular Latest</li>
         <li>Java 8 + Spring Boot 1.5</li>
         <li>PHP 7.2 + CodeIgniter 3 / Symfony 3</li>
-        <li>Webpack, SASS, random JS libraries</li>
-        <li>NginX and Docker-based CI</li>
+        <li>Webpack, SCSS, any random JS library</li>
+        <li>NginX, Docker-based CI, Kubernetes</li>
         <li>Web performance and engineering as concepts</li>
         <li>Installing a decent AWS-based infrastructure from scratch</li>
     </ul>
