--- a/resume.html
+++ b/resume.html
@@ -11,9 +11,9 @@ permalink: /resume
         Again, thank you for the time you have spent discovering this website.
         Did you know that it only uses HTML and CSS for everything?
         Yes, that is correct, no JavaScript, although it is hosted on 
-        <a href="https://pages.github.com/">GitHub Pages</a>, using 
-        <a href="https://jekyllrb.com/">Jekyll</a> to generate the content you are reading and
-        proudly delivered to you by <a href="https://www.cloudflare.com/">CloudFlare</a>!
+        <a href="https://pages.github.com/" rel="nofollow">GitHub Pages</a>, using 
+        <a href="https://jekyllrb.com/" rel="nofollow">Jekyll</a> to generate the content you are reading and
+        proudly delivered to you by <a href="https://www.cloudflare.com/" rel="nofollow">CloudFlare</a>!
     </p>
     <p>
         Anyway, if you want to find out more, here are my generic resumes.
