--- a/skills.html
+++ b/skills.html
@@ -36,7 +36,7 @@ permalink: /skills
     <ul>
         <li>[Put your favorite web framework here]</li>
         <li>Functional programming</li>
-        <li>Microsoft .NET C#, NodeJS or even <a href="https://web-artanis.com/">Artanis</a></li>
+        <li>Microsoft .NET C#, NodeJS or even <a href="https://web-artanis.com/" rel="nofollow">Artanis</a></li>
         <li>Low level languages when relevant</li>
     </ul>
 
