--- a/index.html
+++ b/index.html
@@ -16,33 +16,31 @@ active: index
         It is one of my duties to help deliver what we consider best in terms of product quality by
         actively participating in the creation of integration and delivery pipelines, quality assurance,
         product standards and by enabling a company-wide sharing of knowledge while solving some of the most 
-        challenging issues when maintaining <s>dark magic</s> undocumented legacy code.
+        challenging issues of today.
     </p>
     <p>
         Apart from that, I spend time tweaking infrastructure, internal platforms, sharing knowledge 
         with peers and maintainers and organizing our technological ecosystem including introducing tools 
-        and services, recruiting and scouting for ideas thay may or may not impact our business.
+        and services and scouting for ideas thay may or may not impact our business.
     </p>
     <p>
-        When I am not behind my desk, I read from <a href="https://news.ycombinator.com/">Hacker News</a>,
+        When I am not behind my desk, I read from <a href="https://news.ycombinator.com/" rel="nofollow">Hacker News</a>,
         join tech meetups, share my <a href="https://github.com/vcz-fr/meetup-notes">meetup notes</a>,
         explore ideas and enjoy my time!
     </p>
     <hr>
     <p>
-        I currently work at <a href="https://moonda.com/"><strong>Moonda</strong></a> as a full-stack developer.
-        It is a web agency based in Bordeaux using <a href="https://ez.no/">eZPublish</a> and
-        <a href="https://ezplatform.com/">eZPlatform</a>, Content Management Systems based on PHP and Symfony.
-        We also create our own products and platforms using edge technologies and practices.
+        I currently work as a <strong>Cloud & DevOps Engineer</strong> at <a href="https://www.gekko.fr"><strong>Gekko</strong></a>. The goal of our company
+        is to make the cloud accessible and a stepping stone to richer product experiences.
     </p>
     <p>
-        Before that, I was in <a href="https://privalia.com/"><strong>VeePee</strong>, a.k.a. Privalia</a>, 
-        a Spanish fashion outlet, as a full-stack developer in their <strong>Performance & Core Platform</strong>
-        team. I was in charge of a project that automatically checks the performance of their platforms.
+        Before that, I was in <a href="https://moonda.com/" rel="nofollow"><strong>Moonda</strong></a> as a full-stack developer.
+        It is a web agency based in Bordeaux using <a href="https://ez.no/" rel="nofollow">eZPublish</a>, a PHP-based Content Management System.
+        They also create their own products and platforms using edge technologies and practices.
     </p>
     <p>
         I have been a Computer Science Engineering student at
-        <a href="https://enseirb-matmeca.bordeaux-inp.fr/"><strong>Bordeaux Graduate School of Engineering</strong></a> or
+        <a href="https://enseirb-matmeca.bordeaux-inp.fr/" rel="nofollow"><strong>Bordeaux Graduate School of Engineering</strong></a> or
         <strong>ENSEIRB-MATMECA</strong>, for short. I chose the Multimedia and Video games specialty there,
         mostly to open myself to new ideas.
     </p>
