fix: Typo in CDN provider name

--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@ permalink: /resume
         Yes, that is correct, no JavaScript, although it is hosted on 
         <a href="https://pages.github.com/" rel="nofollow">GitHub Pages</a>, using 
         <a href="https://jekyllrb.com/" rel="nofollow">Jekyll</a> to generate the content you are reading and
-        proudly delivered to you by <a href="https://www.cloudflare.com/" rel="nofollow">CloudFlare</a>!
+        proudly delivered to you by <a href="https://www.cloudflare.com/" rel="nofollow">Cloudflare</a>!
     </p>
     <p>
         Anyway, if you want to find out more, here are my generic resumes.
