feat: Lazy loading for portfolio images

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@ active: index
     <p>
         It is one of my duties to help deliver what we consider best in terms of product quality by
         actively participating in the creation of integration and delivery pipelines, quality assurance,
-        product standards and by enabling a company-wide sharing of knowledge while solving some of the most 
+        product standards and by enabling a company-wide sharing of knowledge while solving some of the most
         challenging issues of today.
     </p>
     <p>
-        Apart from that, I spend time tweaking infrastructure, internal platforms, sharing knowledge 
-        with peers and maintainers and organizing our technological ecosystem including introducing tools 
+        Apart from that, I spend time tweaking infrastructure, internal platforms, sharing knowledge
+        with peers and maintainers and organizing our technological ecosystem including introducing tools
         and services and scouting for ideas thay may or may not impact our business.
     </p>
     <p>
@@ -30,8 +30,8 @@ active: index
     </p>
     <hr>
     <p>
-        I currently work as a <strong>Cloud & DevOps Engineer</strong> at <a href="https://www.gekko.fr"><strong>Gekko</strong></a>. The goal of our company
-        is to make the cloud accessible and a stepping stone to richer product experiences.
+        I currently work as a <strong>Cloud & DevOps Engineer</strong> at <a href="https://www.gekko.fr"><strong>Gekko</strong></a>.
+        The goal of our company is to make the Cloud accessible and a stepping stone to richer experiences.
     </p>
     <p>
         Before that, I was in <a href="https://moonda.com/" rel="nofollow"><strong>Moonda</strong></a> as a full-stack developer.
