--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,7 @@ permalink: /skills
     <h2>Abilities</h2>
     <p>
         Technologically speaking, I am agnostic.
-        I don't believe there can be one universally best technology stack.
+        I don't believe in one universally best technology stack.
         Fundamentally, the underlying design processes are similar so it would not make sense to reject
         some because they contain noisy, old-school or proprietary elements.
     </p>
@@ -23,11 +23,10 @@ permalink: /skills
     I feel confident with:
     <ul>
         <li>HTML5, CSS3, JS Latest</li>
-        <li>ReactJS 15, Angular Latest</li>
-        <li>Java 8 + Spring Boot 1.5</li>
-        <li>PHP 7.2 + CodeIgniter 3 / Symfony 3</li>
+        <li>NodeJS, ReactJS 15, Angular Latest</li>
         <li>Webpack, SCSS, any random JS library</li>
-        <li>NginX, Docker-based CI, Kubernetes</li>
+        <li>NginX, Docker-based CI</li>
+        <li>Terraform</li>
         <li>Web performance and engineering as concepts</li>
         <li>Installing a decent AWS-based infrastructure from scratch</li>
     </ul>
@@ -36,7 +35,7 @@ permalink: /skills
     <ul>
         <li>[Put your favorite web framework here]</li>
         <li>Functional programming</li>
-        <li>Microsoft .NET C#, NodeJS or even <a href="https://web-artanis.com/" rel="nofollow">Artanis</a></li>
+        <li>Microsoft .NET C# or even <a href="https://web-artanis.com/" rel="nofollow">Artanis</a></li>
         <li>Low level languages when relevant</li>
     </ul>
 
