feat: Icon update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ active: index
     </p>
     <hr>
     <p>
-        I currently work as a <strong>Cloud & DevOps Engineer</strong> at <a href="https://www.gekko.fr"><strong>Gekko</strong></a>.
+        I currently work as a <strong>Cloud & DevOps Engineer</strong> at <a href="https://www.gekko.fr"><strong>Gekko Part of Accenture</strong></a>.
         The goal of our company is to make the Cloud accessible and a stepping stone to richer experiences.
     </p>
     <p>
