Finally, some updates!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ active: index
 
 <div class="card">
     <h2>About me</h2>
+
     <p>
         Hello, Vincenzo <b>Scalzi</b> here!
     </p>
@@ -13,36 +14,33 @@ active: index
         for more ideas. <em>In performance I trust.</em>
     </p>
     <p>
-        It is one of my duties to help deliver what we consider best in terms of product quality by
-        actively participating in the creation of integration and delivery pipelines, quality assurance,
-        product standards and by enabling a company-wide sharing of knowledge while solving some of the most
-        challenging issues of today.
+        It is one of my duties to help deliver what the community considers best in terms of product quality by
+        actively participating in the creation of product and development standards and by enabling a company-wide
+        sharing of knowledge while solving some of the most challenging issues of today.
     </p>
     <p>
-        Apart from that, I spend time tweaking infrastructure, internal platforms, sharing knowledge
-        with peers and maintainers and organizing our technological ecosystem including introducing tools
-        and services and scouting for ideas thay may or may not impact our business.
+        Apart from that, I spend time tweaking infrastructure, internal platforms, sharing knowledge with peers and
+        maintainers and organizing our technological ecosystem including introducing tools and services and scouting for
+        ideas that matter.
     </p>
     <p>
         When I am not behind my desk, I read from <a href="https://news.ycombinator.com/" rel="nofollow">Hacker News</a>,
-        join tech meetups, share my <a href="https://github.com/vcz-fr/meetup-notes">meetup notes</a>,
-        explore ideas and enjoy my time!
+        join tech meetups, share my <a href="https://github.com/vcz-fr/meetup-notes">meetup notes</a>, explore ideas and
+        enjoy my time!
     </p>
     <hr>
     <p>
-        I currently work as a <strong>Cloud & DevOps Engineer</strong> at <a href="https://www.gekko.fr"><strong>Gekko Part of Accenture</strong></a>.
-        The goal of our company is to make the Cloud accessible and a stepping stone to richer experiences.
+        I currently work as a <strong>Senior Cloud & DevOps Engineer</strong> at <a href="https://www.gekko.fr"  rel="nofollow"><strong>Gekko Part of Accenture</strong></a>.
+        We make the Cloud a stepping stone to richer experiences.
     </p>
     <p>
-        Before that, I was in <a href="https://moonda.com/" rel="nofollow"><strong>Moonda</strong></a> as a full-stack developer.
+        Before that, I was in <a href="https://moonda.com/" rel="nofollow"><strong>Moonda</strong></a> as a Fullstack Developer.
         It is a web agency based in Bordeaux using <a href="https://ez.no/" rel="nofollow">eZPublish</a>, a PHP-based Content Management System.
-        They also create their own products and platforms using edge technologies and practices.
     </p>
     <p>
-        I have been a Computer Science Engineering student at
-        <a href="https://enseirb-matmeca.bordeaux-inp.fr/" rel="nofollow"><strong>Bordeaux Graduate School of Engineering</strong></a> or
-        <strong>ENSEIRB-MATMECA</strong>, for short. I chose the Multimedia and Video games specialty there,
-        mostly to open myself to new ideas.
+        I have been a Computer Science Engineering student at <a href="https://enseirb-matmeca.bordeaux-inp.fr/" rel="nofollow"><strong>Bordeaux Graduate School of Engineering</strong></a>
+        a.k.a. <strong>ENSEIRB-MATMECA</strong>. I chose the Multimedia and Video games specialty there, mostly to open
+        myself to new ideas.
     </p>
     <p>
         If you ever need help with a web project or want to learn a few things, let's have a chat!
