--- a/skills.html
+++ b/skills.html
@@ -1,55 +1,49 @@
 ---
 layout: default
 active: skills
-permalink: /skills
 ---
 
 <div class="card">
     <h2>Abilities</h2>
+
     <p>
-        Technologically speaking, I am agnostic.
-        I don't believe in one universally best technology stack.
+        Technologically speaking, I am agnostic. I don't believe in one universally best technology stack.
         Fundamentally, the underlying design processes are similar so it would not make sense to reject
         some because they contain noisy, old-school or proprietary elements.
-    </p>
-    <p>
-        Apart from the technical skills, there are some notable soft ones.
-        We might lose accuracy here so buckle up buckaroo, we're in for an joyful ride!
     </p>
 </div>
 
 <div class="card">
     <h3>The techie</h3>
+
     I feel confident with:
     <ul>
-        <li>HTML5, CSS3, JS Latest</li>
-        <li>NodeJS, ReactJS 15, Angular Latest</li>
-        <li>Webpack, SCSS, any random JS library</li>
+        <li>HTML5, CSS3, JS frontend and server ecosystem</li>
+        <li>AWS, AWS CLI, Terraform</li>
         <li>NginX, Docker-based CI</li>
-        <li>Terraform</li>
-        <li>Web performance and engineering as concepts</li>
-        <li>Installing a decent AWS-based infrastructure from scratch</li>
+        <li>Web performance and engineering</li>
+        <li>Serverless and container infrastructures</li>
+        <li>Static site generation</li>
     </ul>
 
-    Not afraid of using:
+    Would like to discover:
     <ul>
-        <li>[Put your favorite web framework here]</li>
-        <li>Functional programming</li>
-        <li>Microsoft .NET C# or even <a href="https://web-artanis.com/" rel="nofollow">Artanis</a></li>
-        <li>Low level languages when relevant</li>
+        <li>More of Python and C#</li>
+        <li>Rust</li>
+        <li>Ideas and tools to reduce development and operational chores</li>
     </ul>
 
     Also worked with:
     <ul>
         <li>Multi-model non relational database: OrientDB</li>
         <li>Database deamons: Maxwell, Debezium</li>
-        <li>Message broker: Kafka with Spring Boot integration</li>
+        <li>Message broker: Kafka with SpringBoot integration</li>
         <li>OpenID Connect: MitreID</li>
         <li>Web performance:
             <ul>
                 <li>Browser tools: Firefox Developer Edition, Google Chrome Beta</li>
                 <li>Client performance: Yellowlab, WebpageTest</li>
-                <li>Load testing: <span class="icon" title="Certified!"></span> Octoperf</li>
+                <li>Load testing: Octoperf</li>
                 <li>App performance: AppDynamics, BlackFire</li>
             </ul>
         </li>
@@ -84,13 +78,13 @@ permalink: /skills
     <h3>The other stuff</h3>
 
     <p>
-        I love trying new things, it helps me thinking out of the box.
+        I love trying new things and experimenting, it helps me thinking out of the box.
         Being creative is really important when dealing with issues almost nobody faced before.
         I'm obviously not limiting myself to new technologies.
     </p>
 
     <p>
         Quite frankly, I love going out for new experiences as much as I fancy watching movies and
-        series, meeting new people and having a nice time.
+        series, meeting new faces and sharing my knowledge.
     </p>
 </div>
