--- a/resume.html
+++ b/resume.html
@@ -1,19 +1,17 @@
 ---
 layout: default
 active: resume
-permalink: /resume
 ---
 
 <div class="card">
-    <h2>Thy resume</h2>
+    <h2>The Resume</h2>
 
     <p>
         Again, thank you for the time you have spent discovering this website.
-        Did you know that it only uses HTML and CSS for everything?
-        Yes, that is correct, no JavaScript, although it is hosted on
-        <a href="https://pages.github.com/" rel="nofollow">GitHub Pages</a>, using
-        <a href="https://jekyllrb.com/" rel="nofollow">Jekyll</a> to generate the content you are reading and
-        proudly delivered to you by <a href="https://www.cloudflare.com/" rel="nofollow">Cloudflare</a>!
+        Did you know that it only uses HTML and CSS for everything? That is correct, no JavaScript.
+        It is hosted on <a href="https://pages.github.com/" rel="nofollow">GitHub Pages</a>, using
+        <a href="https://jekyllrb.com/" rel="nofollow">Jekyll</a> to generate the content you see on your screen and
+        is delivered to you by <a href="https://www.cloudflare.com/" rel="nofollow">Cloudflare</a>!
     </p>
     <p>
         Anyway, if you want to find out more, here are my generic resumes.
@@ -26,7 +24,7 @@ permalink: /resume
     <h3>{{item.language}}</h3>
     <p>
         <a href="/assets/resume/{{item.file}}">Link</a>
-        &mdash; {{item.size}}KB, last modified {{item.last-modified | date: "%m/%d/%Y"}}
+        &mdash; last modified {{item.last-modified | date: "%m/%d/%Y"}}
     </p>
 </div>
 {% endfor %}
