--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,13 @@ active: portfolio
     {% for item in site.data.portfolio %}
     <div class="card portfolio-item">
         <div class="portfolio-image">
-            <img alt="{{item.name}}" loading="lazy" src="/assets/img/portfolio/{{item.image}}">
+            {% if item.image.exts contains "avif" %}
+            <source type="image/avif" srcset="/assets/img/portfolio/{{item.image.id}}.avif">
+            {% endif %}
+            {% if item.image.exts contains "webp" %}
+            <source type="image/webp" srcset="/assets/img/portfolio/{{item.image.id}}.webp">
+            {% endif %}
+            <img alt="{{item.name}}" loading="lazy" src="/assets/img/portfolio/{{item.image.id}}.webp">
         </div>
         <div>
             <h3>{{ item.name }}</h3>
