--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@ active: portfolio
 
     {% for item in site.data.portfolio %}
     <div class="card portfolio-item">
-        <div class="portfolio-image">
+        <picture class="portfolio-image">
             {% if item.image.exts contains "avif" %}
             <source type="image/avif" srcset="/assets/img/portfolio/{{item.image.id}}.avif">
             {% endif %}
@@ -23,7 +23,7 @@ active: portfolio
             <source type="image/webp" srcset="/assets/img/portfolio/{{item.image.id}}.webp">
             {% endif %}
             <img alt="{{item.name}}" loading="lazy" src="/assets/img/portfolio/{{item.image.id}}.webp">
-        </div>
+        </picture>
         <div>
             <h3>{{ item.name }}</h3>
             <p>{{ item.description }}</p>
